--- a/index.html
+++ b/index.html
@@ -25,32 +25,34 @@
 
   <body>
     <header>
-      <input
-        type="text"
-        id="addTodoInput"
-        placeholder="Add something to do..."
-      />
-      <button id="add">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          style="isolation:isolate"
-          viewBox="-69 -327 45 45"
-          width="35"
-          height="35"
-        >
-          <path
-            d="M-29.156-303.416h-16.26v16.26h-2.168v-16.26h-16.26v-2.168h16.26v-16.26h2.168v16.26h16.26v2.168z"
-            fill="#C1311E"
-          />
-          <path fill="none" d="M-69-327h45v45h-45z" />
-        </svg>
-      </button>
+      <form id="todo-form">
+        <input
+          type="text"
+          id="todo-input"
+          placeholder="Add something to do..."
+        />
+        <button id="todo-add" type="submit">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            style="isolation:isolate"
+            viewBox="-69 -327 45 45"
+            width="35"
+            height="35"
+          >
+            <path
+              d="M-29.156-303.416h-16.26v16.26h-2.168v-16.26h-16.26v-2.168h16.26v-16.26h2.168v16.26h16.26v2.168z"
+              fill="#C1311E"
+            />
+            <path fill="none" d="M-69-327h45v45h-45z" />
+          </svg>
+        </button>
+      </form>
     </header>
     <div class="container">
       <ul class="todo" id="todoList"></ul>
       <ul class="todo" id="completedList"></ul>
     </div>
-    <script src="es6.js"></script>
+    <script src="es5.js"></script>
     <!--[if lt IE 7]>
       <p class="browsehappy">
         You are using an <strong>outdated</strong> browser. Please
